--- a/react-web-app/src/components/profile/PostThumbnailCard/PostThumbnailCard.css
+++ b/react-web-app/src/components/profile/PostThumbnailCard/PostThumbnailCard.css
@@ -7,10 +7,9 @@
     --bs-card-border-width: none !important;
     --bs-card-cap-bg: none;
     font-weight: 500;
-    color: #4e4e4e !important;
 }
 
-.card-body
+.post-card-body
 {
     padding-bottom: 20px !important;
     text-align: center;
